--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,12 @@
     <string name="hint_phone">Phone</string>
     <string name="facebook_app_id">323569899033088</string>
     <string name="fb_login_protocol_scheme">fb323569899033088</string>
+    <string name="title_activity_custom_camara">CustomCamaraActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 
 
 </resources>
